# sarge

./: .coveragerc  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README  README.rst  appveyor.yml  echoer.py  lister.py  package.json  pyproject.toml  retrier.py  setup.cfg  setup.py  slow_lister.py  stack_tracer.py  test_expect.py  test_expect2.py  test_feeder.py  test_progress.py  test_sarge.py  tox.ini  waiter.py
.github/workflows/: package-tests.yml
docs/: Makefile  conf.py  index.rst  internals.rst  overview.rst  reference.rst  spelling_wordlist.txt  tutorial.rst
sarge/: __init__.py  shlext.py  utils.py
