[metadata]
name = sarge
version = attr: sarge.__version__
description = A wrapper for subprocess which provides command pipeline functionality.
long_description = The sarge package provides a wrapper for subprocess which provides
    command pipeline functionality.

    This package leverages subprocess to provide easy-to-use cross-platform command
    pipelines with a POSIX flavour: you can have chains of commands using ``;``, ``&``,
    pipes using ``|`` and ``|&``, and redirection.
url = https://github.com/vsajip/sarge
author = Vinay Sajip
author_email = vinay_sajip@yahoo.co.uk
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Shells
project_urls =
    Documentation = https://sarge.readthedocs.io/
    Source = https://github.com/vsajip/sarge
    Tracker = https://github.com/vsajip/sarge/issues
keywords = subprocess, wrapper, external, command
platforms = any

[options]
packages = sarge

[bdist_wheel]
universal = 1
